--- a/wrangler.toml
+++ b/wrangler.toml
@@ -21,3 +21,21 @@ preview_id = ""
 binding = "NOTES_R2_BUCKET"
 bucket_name = "notes-r2-bucket"
 preview_bucket_name = "notes-files-preview"
+
+{
+  "observability": {
+    "enabled": false,
+    "head_sampling_rate": 1,
+    "logs": {
+      "enabled": true,
+      "head_sampling_rate": 1,
+      "persist": true,
+      "invocation_logs": true
+    },
+    "traces": {
+      "enabled": false,
+      "persist": true,
+      "head_sampling_rate": 1
+    }
+  }
+}
